fix: right negative fluid spacing

--- a/src/components/composition/Spacing/Spacing.module.scss
+++ b/src/components/composition/Spacing/Spacing.module.scss
@@ -205,7 +205,7 @@
           margin-right: calc(-1 * var(--spacing-xl));
         }
 
-        &-right {
+        &-fluid {
           margin-left: calc(-1 * var(--spacing-fluid));
         }
       }
